--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -603,6 +603,7 @@
     "EntityUmvuthanaFollowerToRaptor": 8.0,
     "EntityUmvuthanaCrane": 8.0,
     "ScorpionEntity": 24.0,
-    "BabySkeletonMinionEntity": 10.0
+    "BabySkeletonMinionEntity": 10.0,
+    "Phantom": 20.0
   }
 }
