--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -38,6 +38,7 @@
     "minecraft:spruce_slab": false,
     "minecraft:acacia_fence": false,
     "minecraft:blue_bed": false,
+    "minecraft:white_terracotta": false,
     "iceandfire:pixie_house_mushroom_red": false,
     "minecraft:acacia_wood": false,
     "minecraft:stripped_mangrove_log": false,
@@ -127,6 +128,7 @@
     "minecraft:ladder": false,
     "minecraft:snow": false,
     "minecraft:red_bed": false,
+    "minecraft:jungle_planks": false,
     "minecraft:chain": false,
     "minecraft:glass_pane": false,
     "luminousworld:ishstone": false,
@@ -229,6 +231,7 @@
     "iceandfire:dragonbone": false,
     "minecraft:golden_axe": false,
     "minecraft:pumpkin": false,
+    "minecraft:slime_ball": false,
     "minecraft:lantern": false,
     "supplementaries:ash": false,
     "minecraft:stone_sword": false,
@@ -239,6 +242,7 @@
     "minecraft:red_bed": false,
     "minecraft:stripped_dark_oak_wood": false,
     "minecraft:jungle_planks": false,
+    "minecraft:terracotta": false,
     "iceandfire:manuscript": false,
     "tombstone:gift": false,
     "minecraft:hay_block": false,
