--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -279,7 +279,9 @@
     "EntityUmvuthanaCrane": true,
     "TheimmortalEntity": true,
     "MummyEntity": true,
-    "Phantom": true
+    "Phantom": true,
+    "BoneImpMinionEntity": true,
+    "SupremeBonescallerStage2Entity": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -467,7 +469,9 @@
     "EntityUmvuthanaCrane": false,
     "TheimmortalEntity": false,
     "MummyEntity": false,
-    "Phantom": false
+    "Phantom": false,
+    "BoneImpMinionEntity": false,
+    "SupremeBonescallerStage2Entity": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -604,6 +608,9 @@
     "EntityUmvuthanaCrane": 8.0,
     "ScorpionEntity": 24.0,
     "BabySkeletonMinionEntity": 10.0,
-    "Phantom": 20.0
+    "Phantom": 20.0,
+    "PhantomCreeperCopyEntity": 20.0,
+    "BoneImpMinionEntity": 20.0,
+    "StarvedEntity": 16.0
   }
 }
