--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -92,6 +92,7 @@
     "minecraft:cyan_carpet": false,
     "iceandfire:silver_pile": false,
     "minecraft:oak_planks": false,
+    "minecraft:cut_sandstone": false,
     "born_in_chaos_v1:chipped_black_argillite_brick": false,
     "minecraft:spruce_leaves": false,
     "luminousworld:ancient_sandstonebricks": false,
@@ -100,6 +101,7 @@
     "minecraft:acacia_slab": false,
     "minecraft:birch_leaves": false,
     "minecraft:spruce_trapdoor": false,
+    "minecraft:cactus": false,
     "minecraft:iron_ore": false,
     "minecraft:yellow_bed": false,
     "minecraft:nether_brick_slab": false,
@@ -132,7 +134,9 @@
     "minecraft:chain": false,
     "minecraft:glass_pane": false,
     "luminousworld:ishstone": false,
+    "born_in_chaos_v1:infected_diamond_ore": false,
     "minecraft:oak_trapdoor": false,
+    "minecraft:rail": false,
     "minecraft:spruce_fence_gate": false,
     "minecraft:farmland": false,
     "minecraft:iron_block": false,
@@ -144,6 +148,7 @@
     "minecraft:spawner": false,
     "ecologics:walnut_log": false,
     "minecraft:orange_terracotta": false,
+    "minecraft:glow_lichen": false,
     "minecraft:light_gray_carpet": false,
     "minecraft:stone_brick_stairs": false,
     "minecraft:coarse_dirt": false,
@@ -152,6 +157,7 @@
     "minecraft:dark_oak_log": false,
     "minecraft:cauldron": false,
     "ecologics:walnut_leaves": false,
+    "minecraft:chiseled_sandstone": false,
     "minecraft:dark_oak_fence_gate": false,
     "minecraft:dark_oak_stairs": false,
     "minecraft:quartz_block": false,
@@ -186,6 +192,7 @@
     "minecraft:birch_slab": false,
     "minecraft:cartography_table": false,
     "born_in_chaos_v1:black_argillite": false,
+    "minecraft:smooth_sandstone": false,
     "minecraft:iron_bars": false,
     "iceandfire:gold_pile": false,
     "minecraft:gray_carpet": false,
@@ -220,6 +227,7 @@
     "minecraft:copper_ingot": false,
     "iceandfire:gorgon_head": false,
     "minecraft:bread": false,
+    "minecraft:iron_ingot": false,
     "minecraft:emerald": false,
     "ecologics:coconut_husk": false,
     "minecraft:air": false,
@@ -231,6 +239,7 @@
     "iceandfire:dragonbone": false,
     "minecraft:golden_axe": false,
     "minecraft:pumpkin": false,
+    "minecraft:iron_axe": false,
     "minecraft:slime_ball": false,
     "minecraft:lantern": false,
     "supplementaries:ash": false,
@@ -252,6 +261,7 @@
     "minecraft:iron_sword": false,
     "minecraft:diamond": false,
     "minecraft:potato": false,
+    "minecraft:enchanted_golden_apple": false,
     "minecraft:wooden_axe": false,
     "minecraft:water_bucket": false,
     "hangglider:hang_glider": false,
