--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -6,6 +6,7 @@
   "bannedBlocks": {
     "minecraft:sandstone_wall": false,
     "minecraft:stone_pressure_plate": false,
+    "minecraft:smooth_stone": false,
     "minecraft:gray_bed": false,
     "minecraft:dripstone_block": false,
     "iceandfire:copper_pile": false,
@@ -20,6 +21,7 @@
     "minecraft:stone": false,
     "minecraft:sand": false,
     "born_in_chaos_v1:carved_black_argillite": false,
+    "quark:jasper": false,
     "minecraft:amethyst_block": false,
     "minecraft:mangrove_fence": false,
     "iceandfire:chared_gravel": false,
@@ -188,6 +190,7 @@
     "minecraft:cracked_deepslate_bricks": false,
     "minecraft:beehive": false,
     "minecraft:red_terracotta": false,
+    "placeablesmod:bread_full_block": false,
     "minecraft:deepslate_lapis_ore": false,
     "minecraft:birch_slab": false,
     "minecraft:cartography_table": false,
