--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -281,7 +281,9 @@
     "MummyEntity": true,
     "Phantom": true,
     "BoneImpMinionEntity": true,
-    "SupremeBonescallerStage2Entity": true
+    "SupremeBonescallerStage2Entity": true,
+    "PheonixEntity": true,
+    "Firecaller": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -471,7 +473,9 @@
     "MummyEntity": false,
     "Phantom": false,
     "BoneImpMinionEntity": false,
-    "SupremeBonescallerStage2Entity": false
+    "SupremeBonescallerStage2Entity": false,
+    "PheonixEntity": false,
+    "Firecaller": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
