--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -15,6 +15,7 @@
     "minecraft:oak_stairs": false,
     "luminousworld:ancient_chiseled_half_sandstone_bricks": false,
     "minecraft:stone_bricks": false,
+    "minecraft:light_gray_terracotta": false,
     "minecraft:granite": false,
     "minecraft:lantern": false,
     "minecraft:cobblestone_stairs": false,
@@ -31,6 +32,7 @@
     "iceandfire:chared_grass": false,
     "minecraft:dark_oak_fence": false,
     "minecraft:oak_slab": false,
+    "quark:red_corundum_cluster": false,
     "luminousworld:ancient_sandstone_stairs": false,
     "minecraft:dark_prismarine": false,
     "iceandfire:dread_stone_bricks_mossy": false,
@@ -68,6 +70,7 @@
     "minecraft:polished_deepslate_wall": false,
     "iceandfire:crackled_stone": false,
     "minecraft:dark_oak_slab": false,
+    "minecraft:deepslate_diamond_ore": false,
     "iceandfire:pixie_house_spruce": false,
     "minecraft:waxed_oxidized_cut_copper_stairs": false,
     "minecraft:deepslate_copper_ore": false,
@@ -105,17 +108,20 @@
     "minecraft:spruce_trapdoor": false,
     "minecraft:cactus": false,
     "minecraft:iron_ore": false,
+    "minecraft:smooth_sandstone_stairs": false,
     "minecraft:yellow_bed": false,
     "minecraft:nether_brick_slab": false,
     "minecraft:acacia_planks": false,
     "minecraft:oak_log": false,
     "minecraft:mud": false,
+    "minecraft:sandstone_stairs": false,
     "minecraft:cobbled_deepslate": false,
     "minecraft:mossy_cobblestone": false,
     "minecraft:calcite": false,
     "iceandfire:graveyard_soil": false,
     "minecraft:waxed_cut_copper_slab": false,
     "quark:yellow_blossom_leaves": false,
+    "quark:violet_corundum": false,
     "minecraft:black_bed": false,
     "minecraft:petrified_oak_slab": false,
     "supplementaries:urn": false,
@@ -126,6 +132,7 @@
     "mowziesmobs:clawed_log": false,
     "minecraft:brown_carpet": false,
     "iceandfire:pixie_house_oak": false,
+    "quark:violet_corundum_cluster": false,
     "minecraft:stone_stairs": false,
     "minecraft:stripped_jungle_wood": false,
     "minecraft:acacia_log": false,
@@ -215,6 +222,7 @@
     "minecraft:chiseled_stone_bricks": false,
     "minecraft:copper_ore": false,
     "minecraft:mangrove_trapdoor": false,
+    "minecraft:brown_terracotta": false,
     "minecraft:stripped_mangrove_wood": false,
     "minecraft:emerald_ore": false,
     "minecraft:cobbled_deepslate_slab": false
