--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -11,9 +11,11 @@
     "minecraft:dripstone_block": false,
     "iceandfire:copper_pile": false,
     "minecraft:acacia_fence_gate": false,
+    "born_in_chaos_v1:gnawed_bones": false,
     "luminousworld:whiteoakleaves": false,
     "minecraft:oak_stairs": false,
     "luminousworld:ancient_chiseled_half_sandstone_bricks": false,
+    "ecologics:pot": false,
     "minecraft:stone_bricks": false,
     "minecraft:light_gray_terracotta": false,
     "minecraft:granite": false,
@@ -58,6 +60,7 @@
     "luminousworld:bao_bab_leaves": false,
     "minecraft:red_wall_banner": false,
     "minecraft:white_bed": false,
+    "iceandfire:myrmex_resin_sticky_desert": false,
     "minecraft:crafting_table": false,
     "sophisticatedbackpacks:backpack": false,
     "minecraft:mossy_stone_bricks": false,
@@ -100,6 +103,7 @@
     "minecraft:cut_sandstone": false,
     "born_in_chaos_v1:chipped_black_argillite_brick": false,
     "minecraft:spruce_leaves": false,
+    "luminousworld:ancient_cracked_sandstone_bricks": false,
     "luminousworld:ancient_sandstonebricks": false,
     "minecraft:yellow_terracotta": false,
     "iceandfire:silver_ore": false,
@@ -129,6 +133,7 @@
     "minecraft:dark_oak_door": false,
     "minecraft:oak_leaves": false,
     "minecraft:stone_brick_slab": false,
+    "iceandfire:myrmex_resin_desert": false,
     "mowziesmobs:clawed_log": false,
     "minecraft:brown_carpet": false,
     "iceandfire:pixie_house_oak": false,
@@ -252,6 +257,7 @@
     "minecraft:pumpkin": false,
     "minecraft:iron_axe": false,
     "minecraft:slime_ball": false,
+    "minecraft:granite": false,
     "minecraft:lantern": false,
     "supplementaries:ash": false,
     "minecraft:stone_sword": false,
@@ -263,6 +269,7 @@
     "minecraft:stripped_dark_oak_wood": false,
     "minecraft:jungle_planks": false,
     "minecraft:terracotta": false,
+    "minecraft:string": false,
     "iceandfire:manuscript": false,
     "tombstone:gift": false,
     "minecraft:hay_block": false,
