--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -615,6 +615,7 @@
     "Phantom": 20.0,
     "PhantomCreeperCopyEntity": 20.0,
     "BoneImpMinionEntity": 20.0,
-    "StarvedEntity": 16.0
+    "StarvedEntity": 16.0,
+    "MutantSkeleton": 150.0
   }
 }
