--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -11,6 +11,7 @@
     "minecraft:dripstone_block": false,
     "iceandfire:copper_pile": false,
     "minecraft:acacia_fence_gate": false,
+    "minecraft:red_sand": false,
     "born_in_chaos_v1:gnawed_bones": false,
     "luminousworld:whiteoakleaves": false,
     "minecraft:oak_stairs": false,
@@ -236,6 +237,7 @@
     "minecraft:yellow_bed": false,
     "minecraft:crafting_table": false,
     "sophisticatedbackpacks:backpack": false,
+    "born_in_chaos_v1:charmof_power": false,
     "minecraft:oak_log": false,
     "minecraft:wheat_seeds": false,
     "minecraft:cobbled_deepslate": false,
@@ -252,6 +254,7 @@
     "minecraft:iron_hoe": false,
     "tombstone:christmas_gift": false,
     "minecraft:torch": false,
+    "mowziesmobs:wrought_axe": false,
     "iceandfire:dragonbone": false,
     "minecraft:golden_axe": false,
     "minecraft:pumpkin": false,
@@ -274,6 +277,7 @@
     "tombstone:gift": false,
     "minecraft:hay_block": false,
     "minecraft:iron_block": false,
+    "minecraft:wheat": false,
     "luminousworld:decorative_brown_2": false,
     "minecraft:dirt": false,
     "minecraft:iron_sword": false,
@@ -288,6 +292,7 @@
     "iceandfire:silver_axe": false,
     "tombstone:grave_key": false,
     "minecraft:wooden_pickaxe": false,
+    "minecraft:white_terracotta": false,
     "ecologics:walnut": false,
     "minecraft:stone_pickaxe": false,
     "minecraft:oak_planks": false,
