--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -283,7 +283,8 @@
     "BoneImpMinionEntity": true,
     "SupremeBonescallerStage2Entity": true,
     "PheonixEntity": true,
-    "Firecaller": true
+    "Firecaller": true,
+    "EntityFoliaath": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -475,7 +476,8 @@
     "BoneImpMinionEntity": false,
     "SupremeBonescallerStage2Entity": false,
     "PheonixEntity": false,
-    "Firecaller": false
+    "Firecaller": false,
+    "EntityFoliaath": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -616,6 +618,8 @@
     "PhantomCreeperCopyEntity": 20.0,
     "BoneImpMinionEntity": 20.0,
     "StarvedEntity": 16.0,
-    "MutantSkeleton": 150.0
+    "MutantSkeleton": 150.0,
+    "Archivist": 24.0,
+    "Provoker": 24.0
   }
 }
