--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -164,6 +164,7 @@
     "ecologics:walnut_log": false,
     "minecraft:orange_terracotta": false,
     "minecraft:glow_lichen": false,
+    "placeablesmod:wheat_block_1": false,
     "minecraft:light_gray_carpet": false,
     "minecraft:stone_brick_stairs": false,
     "minecraft:coarse_dirt": false,
@@ -260,6 +261,7 @@
     "minecraft:pumpkin": false,
     "minecraft:iron_axe": false,
     "minecraft:slime_ball": false,
+    "born_in_chaos_v1:ethereal_spirit": false,
     "minecraft:granite": false,
     "minecraft:lantern": false,
     "supplementaries:ash": false,
@@ -289,6 +291,7 @@
     "hangglider:hang_glider": false,
     "minecraft:melon_slice": false,
     "minecraft:gravel": false,
+    "iceandfire:amphithere_feather": false,
     "iceandfire:silver_axe": false,
     "tombstone:grave_key": false,
     "minecraft:wooden_pickaxe": false,
