--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -65,6 +65,7 @@
     "minecraft:crafting_table": false,
     "sophisticatedbackpacks:backpack": false,
     "minecraft:mossy_stone_bricks": false,
+    "iceandfire:crackled_grass": false,
     "minecraft:birch_log": false,
     "minecraft:white_carpet": false,
     "minecraft:cyan_bed": false,
@@ -106,6 +107,7 @@
     "minecraft:spruce_leaves": false,
     "luminousworld:ancient_cracked_sandstone_bricks": false,
     "luminousworld:ancient_sandstonebricks": false,
+    "minecraft:jungle_log": false,
     "minecraft:yellow_terracotta": false,
     "iceandfire:silver_ore": false,
     "minecraft:acacia_slab": false,
