--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -620,6 +620,7 @@
     "StarvedEntity": 16.0,
     "MutantSkeleton": 150.0,
     "Archivist": 24.0,
-    "Provoker": 24.0
+    "Provoker": 24.0,
+    "ThepregnantEntity": 80.0
   }
 }
