--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -22,6 +22,7 @@
     "minecraft:granite": false,
     "minecraft:lantern": false,
     "minecraft:cobblestone_stairs": false,
+    "minecraft:polished_diorite": false,
     "minecraft:stone": false,
     "minecraft:sand": false,
     "born_in_chaos_v1:carved_black_argillite": false,
@@ -64,6 +65,7 @@
     "iceandfire:myrmex_resin_sticky_desert": false,
     "minecraft:crafting_table": false,
     "sophisticatedbackpacks:backpack": false,
+    "minecraft:lever": false,
     "minecraft:mossy_stone_bricks": false,
     "iceandfire:crackled_grass": false,
     "minecraft:birch_log": false,
@@ -163,6 +165,7 @@
     "minecraft:vine": false,
     "minecraft:deepslate_gold_ore": false,
     "minecraft:spawner": false,
+    "minecraft:glowstone": false,
     "ecologics:walnut_log": false,
     "minecraft:orange_terracotta": false,
     "minecraft:glow_lichen": false,
@@ -259,6 +262,7 @@
     "minecraft:torch": false,
     "mowziesmobs:wrought_axe": false,
     "iceandfire:dragonbone": false,
+    "born_in_chaos_v1:charmof_stealth": false,
     "minecraft:golden_axe": false,
     "minecraft:pumpkin": false,
     "minecraft:iron_axe": false,
@@ -270,6 +274,7 @@
     "minecraft:stone_sword": false,
     "minecraft:cobblestone": false,
     "minecraft:stripped_jungle_wood": false,
+    "minecraft:diorite": false,
     "minecraft:acacia_log": false,
     "minecraft:sand": false,
     "minecraft:red_bed": false,
