--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -38,6 +38,7 @@
     "minecraft:oak_slab": false,
     "quark:red_corundum_cluster": false,
     "luminousworld:ancient_sandstone_stairs": false,
+    "iceandfire:crackled_cobblestone": false,
     "minecraft:dark_prismarine": false,
     "iceandfire:dread_stone_bricks_mossy": false,
     "quark:monster_box": false,
@@ -132,6 +133,7 @@
     "quark:yellow_blossom_leaves": false,
     "quark:violet_corundum": false,
     "minecraft:black_bed": false,
+    "iceandfire:pixie_jar_4": false,
     "minecraft:petrified_oak_slab": false,
     "supplementaries:urn": false,
     "minecraft:spruce_fence": false,
@@ -314,6 +316,7 @@
     "minecraft:porkchop": false,
     "iceandfire:copper_sword": false,
     "minecraft:stick": false,
+    "minecraft:spider_eye": false,
     "minecraft:iron_pickaxe": false,
     "minecraft:birch_planks": false,
     "minecraft:charcoal": false,
