--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -46,6 +46,7 @@
     "minecraft:ice": false,
     "minecraft:spruce_slab": false,
     "minecraft:acacia_fence": false,
+    "iceandfire:chared_stone": false,
     "minecraft:blue_bed": false,
     "minecraft:white_terracotta": false,
     "iceandfire:pixie_house_mushroom_red": false,
@@ -131,8 +132,10 @@
     "iceandfire:graveyard_soil": false,
     "minecraft:waxed_cut_copper_slab": false,
     "quark:yellow_blossom_leaves": false,
+    "minecraft:white_stained_glass_pane": false,
     "quark:violet_corundum": false,
     "minecraft:black_bed": false,
+    "minecraft:bricks": false,
     "iceandfire:pixie_jar_4": false,
     "minecraft:petrified_oak_slab": false,
     "supplementaries:urn": false,
@@ -171,6 +174,7 @@
     "ecologics:walnut_log": false,
     "minecraft:orange_terracotta": false,
     "minecraft:glow_lichen": false,
+    "born_in_chaos_v1:black_argillite_brick_slab": false,
     "placeablesmod:wheat_block_1": false,
     "minecraft:light_gray_carpet": false,
     "minecraft:stone_brick_stairs": false,
@@ -184,6 +188,7 @@
     "minecraft:dark_oak_fence_gate": false,
     "minecraft:dark_oak_stairs": false,
     "minecraft:quartz_block": false,
+    "quark:blossom_log": false,
     "minecraft:grass_block": false,
     "minecraft:coal_ore": false,
     "minecraft:deepslate_redstone_ore": false,
@@ -250,6 +255,7 @@
     "minecraft:wheat_seeds": false,
     "minecraft:cobbled_deepslate": false,
     "minecraft:bone": false,
+    "quark:blossom_log": false,
     "minecraft:copper_ingot": false,
     "iceandfire:gorgon_head": false,
     "minecraft:bread": false,
@@ -264,8 +270,10 @@
     "minecraft:torch": false,
     "mowziesmobs:wrought_axe": false,
     "iceandfire:dragonbone": false,
+    "born_in_chaos_v1:phantom_powder": false,
     "born_in_chaos_v1:charmof_stealth": false,
     "minecraft:golden_axe": false,
+    "minecraft:apple": false,
     "minecraft:pumpkin": false,
     "minecraft:iron_axe": false,
     "minecraft:slime_ball": false,
@@ -287,6 +295,7 @@
     "iceandfire:manuscript": false,
     "tombstone:gift": false,
     "minecraft:hay_block": false,
+    "luminousworld:purple_petunias": false,
     "minecraft:iron_block": false,
     "minecraft:wheat": false,
     "luminousworld:decorative_brown_2": false,
@@ -309,6 +318,7 @@
     "minecraft:stone_pickaxe": false,
     "minecraft:oak_planks": false,
     "minecraft:mutton": false,
+    "ecologics:walnut_log": false,
     "minecraft:stone_axe": false,
     "minecraft:oak_fence": false,
     "luminousworld:savannah_soil": false,
