--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -284,7 +284,8 @@
     "SupremeBonescallerStage2Entity": true,
     "PheonixEntity": true,
     "Firecaller": true,
-    "EntityFoliaath": true
+    "EntityFoliaath": true,
+    "SearedSpiritEntity": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -477,7 +478,8 @@
     "SupremeBonescallerStage2Entity": false,
     "PheonixEntity": false,
     "Firecaller": false,
-    "EntityFoliaath": false
+    "EntityFoliaath": false,
+    "SearedSpiritEntity": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
