--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -252,6 +252,7 @@
     "sophisticatedbackpacks:backpack": false,
     "born_in_chaos_v1:charmof_power": false,
     "minecraft:oak_log": false,
+    "minecraft:diamond_hoe": false,
     "minecraft:wheat_seeds": false,
     "minecraft:cobbled_deepslate": false,
     "minecraft:bone": false,
