--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -285,7 +285,10 @@
     "PheonixEntity": true,
     "Firecaller": true,
     "EntityFoliaath": true,
-    "SearedSpiritEntity": true
+    "SearedSpiritEntity": true,
+    "MushroomFieldsEnderman": true,
+    "Necromancer": true,
+    "Alchemist": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -479,7 +482,10 @@
     "PheonixEntity": false,
     "Firecaller": false,
     "EntityFoliaath": false,
-    "SearedSpiritEntity": false
+    "SearedSpiritEntity": false,
+    "MushroomFieldsEnderman": false,
+    "Necromancer": false,
+    "Alchemist": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -623,6 +629,7 @@
     "MutantSkeleton": 150.0,
     "Archivist": 24.0,
     "Provoker": 24.0,
-    "ThepregnantEntity": 80.0
+    "ThepregnantEntity": 80.0,
+    "SupremeBonescallerEntity": 65.0
   }
 }
