--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -33,6 +33,7 @@
     "minecraft:blue_ice": false,
     "minecraft:hay_block": false,
     "minecraft:birch_door": false,
+    "quark:glow_shroom_stem": false,
     "iceandfire:chared_grass": false,
     "minecraft:dark_oak_fence": false,
     "minecraft:oak_slab": false,
@@ -137,7 +138,9 @@
     "minecraft:black_bed": false,
     "minecraft:bricks": false,
     "iceandfire:pixie_jar_4": false,
+    "alexscaves:spelunkery_table": false,
     "minecraft:petrified_oak_slab": false,
+    "iceandfire:pixie_jar_2": false,
     "supplementaries:urn": false,
     "minecraft:spruce_fence": false,
     "minecraft:dark_oak_door": false,
@@ -191,6 +194,7 @@
     "quark:blossom_log": false,
     "minecraft:grass_block": false,
     "minecraft:coal_ore": false,
+    "quark:glow_shroom_block": false,
     "minecraft:deepslate_redstone_ore": false,
     "iceandfire:pixie_jar_empty": false,
     "iceandfire:chared_dirt": false,
@@ -231,6 +235,7 @@
     "minecraft:oak_fence": false,
     "minecraft:spruce_planks": false,
     "iceandfire:crackled_gravel": false,
+    "minecraft:cobbled_deepslate_stairs": false,
     "minecraft:andesite": false,
     "minecraft:dark_oak_planks": false,
     "minecraft:deepslate": false,
@@ -284,6 +289,7 @@
     "supplementaries:ash": false,
     "minecraft:stone_sword": false,
     "minecraft:cobblestone": false,
+    "minecraft:diamond_pickaxe": false,
     "minecraft:stripped_jungle_wood": false,
     "minecraft:diorite": false,
     "minecraft:acacia_log": false,
