--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -292,7 +292,8 @@
     "PiglinBrute": true,
     "Piglin": true,
     "EntitySiren": true,
-    "EntitySkelewag": true
+    "EntitySkelewag": true,
+    "IceologerEntity": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -493,7 +494,8 @@
     "PiglinBrute": false,
     "Piglin": false,
     "EntitySiren": false,
-    "EntitySkelewag": false
+    "EntitySkelewag": false,
+    "IceologerEntity": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -640,6 +642,7 @@
     "ThepregnantEntity": 80.0,
     "SupremeBonescallerEntity": 65.0,
     "PiglinBrute": 25.0,
-    "TropicalSlime": 4.0
+    "TropicalSlime": 4.0,
+    "DireHoundLeaderEntity": 100.0
   }
 }
