--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -269,88 +269,94 @@
   },
   "bannedItems": {
     "minecraft:yellow_bed": false,
-    "minecraft:crafting_table": false,
-    "sophisticatedbackpacks:backpack": false,
     "born_in_chaos_v1:charmof_power": false,
     "minecraft:oak_log": false,
     "minecraft:diamond_hoe": false,
     "minecraft:wheat_seeds": false,
     "minecraft:cobbled_deepslate": false,
+    "minecraft:emerald": false,
+    "ecologics:coconut_husk": false,
+    "minecraft:oak_stairs": false,
+    "tombstone:christmas_gift": false,
+    "mowziesmobs:wrought_axe": false,
+    "iceandfire:dragonbone": false,
+    "born_in_chaos_v1:phantom_powder": false,
+    "iceandfire:silver_shovel": false,
+    "minecraft:golden_axe": false,
+    "minecraft:apple": false,
+    "minecraft:slime_ball": false,
+    "born_in_chaos_v1:ethereal_spirit": false,
+    "minecraft:granite": false,
+    "minecraft:lantern": false,
+    "supplementaries:ash": false,
+    "minecraft:diamond_pickaxe": false,
+    "minecraft:spruce_sapling": false,
+    "minecraft:stripped_jungle_wood": false,
+    "minecraft:acacia_log": false,
+    "minecraft:sand": false,
+    "minecraft:red_bed": false,
+    "minecraft:jungle_planks": false,
+    "minecraft:iron_shovel": false,
+    "iceandfire:manuscript": false,
+    "minecraft:hay_block": false,
+    "minecraft:iron_block": false,
+    "minecraft:wheat": false,
+    "minecraft:iron_sword": false,
+    "minecraft:enchanted_golden_apple": false,
+    "minecraft:wooden_axe": false,
+    "hangglider:hang_glider": false,
+    "minecraft:gravel": false,
+    "iceandfire:amphithere_feather": false,
+    "iceandfire:silver_sword": false,
+    "minecraft:wooden_pickaxe": false,
+    "minecraft:white_terracotta": false,
+    "ecologics:walnut_log": false,
+    "luminousworld:savannah_soil": false,
+    "iceandfire:copper_sword": false,
+    "minecraft:golden_apple": false,
+    "minecraft:cooked_mutton": false,
+    "minecraft:spruce_log": false,
+    "aether:chainmail_gloves": false,
+    "minecraft:white_bed": false,
+    "minecraft:crafting_table": false,
+    "sophisticatedbackpacks:backpack": false,
     "minecraft:bone": false,
     "quark:blossom_log": false,
     "minecraft:copper_ingot": false,
     "iceandfire:gorgon_head": false,
     "minecraft:bread": false,
     "minecraft:iron_ingot": false,
-    "minecraft:emerald": false,
-    "ecologics:coconut_husk": false,
     "minecraft:air": false,
-    "minecraft:oak_stairs": false,
     "born_in_chaos_v1:trident_hayfork": false,
     "minecraft:iron_hoe": false,
-    "tombstone:christmas_gift": false,
     "minecraft:torch": false,
-    "mowziesmobs:wrought_axe": false,
-    "iceandfire:dragonbone": false,
-    "born_in_chaos_v1:phantom_powder": false,
     "born_in_chaos_v1:charmof_stealth": false,
-    "minecraft:golden_axe": false,
-    "minecraft:apple": false,
     "minecraft:pumpkin": false,
     "minecraft:iron_axe": false,
-    "minecraft:slime_ball": false,
-    "born_in_chaos_v1:ethereal_spirit": false,
-    "minecraft:granite": false,
-    "minecraft:lantern": false,
-    "supplementaries:ash": false,
     "minecraft:stone_sword": false,
     "minecraft:cobblestone": false,
-    "minecraft:diamond_pickaxe": false,
-    "minecraft:spruce_sapling": false,
-    "minecraft:stripped_jungle_wood": false,
     "minecraft:diorite": false,
-    "minecraft:acacia_log": false,
-    "minecraft:sand": false,
-    "minecraft:red_bed": false,
     "minecraft:stripped_dark_oak_wood": false,
-    "minecraft:jungle_planks": false,
     "minecraft:terracotta": false,
-    "minecraft:iron_shovel": false,
     "minecraft:string": false,
-    "iceandfire:manuscript": false,
     "tombstone:gift": false,
-    "minecraft:hay_block": false,
     "luminousworld:purple_petunias": false,
-    "minecraft:iron_block": false,
-    "minecraft:wheat": false,
     "luminousworld:decorative_brown_2": false,
     "minecraft:dirt": false,
-    "minecraft:iron_sword": false,
     "minecraft:diamond": false,
     "minecraft:potato": false,
-    "minecraft:enchanted_golden_apple": false,
-    "minecraft:wooden_axe": false,
     "minecraft:water_bucket": false,
-    "hangglider:hang_glider": false,
     "minecraft:melon_slice": false,
-    "minecraft:gravel": false,
-    "iceandfire:amphithere_feather": false,
     "iceandfire:silver_axe": false,
     "tombstone:grave_key": false,
-    "iceandfire:silver_sword": false,
-    "minecraft:wooden_pickaxe": false,
-    "minecraft:white_terracotta": false,
     "ecologics:walnut": false,
     "minecraft:stone_pickaxe": false,
     "minecraft:oak_planks": false,
     "minecraft:mutton": false,
-    "ecologics:walnut_log": false,
     "minecraft:stone_axe": false,
     "minecraft:oak_fence": false,
-    "luminousworld:savannah_soil": false,
     "minecraft:spruce_planks": false,
     "minecraft:porkchop": false,
-    "iceandfire:copper_sword": false,
     "minecraft:stick": false,
     "minecraft:spider_eye": false,
     "minecraft:iron_pickaxe": false,
@@ -358,12 +364,7 @@
     "minecraft:charcoal": false,
     "minecraft:gold_ingot": false,
     "minecraft:flint": false,
-    "minecraft:golden_apple": false,
-    "minecraft:cooked_mutton": false,
-    "minecraft:spruce_log": false,
-    "aether:chainmail_gloves": false,
-    "minecraft:dandelion": false,
-    "minecraft:white_bed": false
+    "minecraft:dandelion": false
   },
   "disableForAllTileEntities": false,
   "disableAutoRegisterNames": false
