--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -643,6 +643,7 @@
     "SupremeBonescallerEntity": 65.0,
     "PiglinBrute": 25.0,
     "TropicalSlime": 4.0,
-    "DireHoundLeaderEntity": 100.0
+    "DireHoundLeaderEntity": 100.0,
+    "SlavemanEntity": 20.0
   }
 }
