--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -336,6 +336,7 @@
     "minecraft:stone_sword": false,
     "minecraft:cobblestone": false,
     "minecraft:diorite": false,
+    "minecraft:diamond_shovel": false,
     "minecraft:stripped_dark_oak_wood": false,
     "minecraft:terracotta": false,
     "minecraft:string": false,
