--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -228,6 +228,7 @@
     "minecraft:sandstone": false,
     "minecraft:oak_door": false,
     "minecraft:mangrove_stairs": false,
+    "minecraft:packed_ice": false,
     "minecraft:pointed_dripstone": false,
     "minecraft:cracked_deepslate_bricks": false,
     "minecraft:beehive": false,
@@ -282,6 +283,7 @@
     "iceandfire:dragonbone": false,
     "born_in_chaos_v1:phantom_powder": false,
     "iceandfire:silver_shovel": false,
+    "minecraft:stone_bricks": false,
     "minecraft:golden_axe": false,
     "minecraft:apple": false,
     "minecraft:slime_ball": false,
@@ -327,6 +329,7 @@
     "minecraft:bread": false,
     "minecraft:iron_ingot": false,
     "minecraft:air": false,
+    "minecraft:rotten_flesh": false,
     "born_in_chaos_v1:trident_hayfork": false,
     "minecraft:iron_hoe": false,
     "minecraft:torch": false,
