--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -293,7 +293,9 @@
     "Piglin": true,
     "EntitySiren": true,
     "EntitySkelewag": true,
-    "IceologerEntity": true
+    "IceologerEntity": true,
+    "ElderGuardian": true,
+    "Guardian": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -495,7 +497,9 @@
     "Piglin": false,
     "EntitySiren": false,
     "EntitySkelewag": false,
-    "IceologerEntity": false
+    "IceologerEntity": false,
+    "ElderGuardian": false,
+    "Guardian": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -644,6 +648,9 @@
     "PiglinBrute": 25.0,
     "TropicalSlime": 4.0,
     "DireHoundLeaderEntity": 100.0,
-    "SlavemanEntity": 20.0
+    "SlavemanEntity": 20.0,
+    "DarkOakZombieEntity": 25.0,
+    "StrayBoneSpider": 24.0,
+    "Guardian": 30.0
   }
 }
