--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -194,6 +194,7 @@
     "minecraft:gold_ore": false,
     "minecraft:spruce_log": false,
     "minecraft:dark_oak_log": false,
+    "minecraft:birch_stairs": false,
     "minecraft:cauldron": false,
     "ecologics:walnut_leaves": false,
     "minecraft:chiseled_sandstone": false,
@@ -219,6 +220,7 @@
     "minecraft:spruce_door": false,
     "minecraft:smooth_quartz_stairs": false,
     "minecraft:cobblestone": false,
+    "minecraft:jungle_leaves": false,
     "minecraft:cobweb": false,
     "minecraft:coal_block": false,
     "minecraft:stripped_spruce_log": false,
@@ -277,6 +279,7 @@
     "minecraft:cobbled_deepslate": false,
     "minecraft:emerald": false,
     "ecologics:coconut_husk": false,
+    "minecraft:bone_meal": false,
     "minecraft:oak_stairs": false,
     "tombstone:christmas_gift": false,
     "mowziesmobs:wrought_axe": false,
@@ -300,13 +303,16 @@
     "minecraft:jungle_planks": false,
     "minecraft:iron_shovel": false,
     "iceandfire:manuscript": false,
+    "minecraft:birch_sapling": false,
     "minecraft:hay_block": false,
     "minecraft:iron_block": false,
     "minecraft:wheat": false,
+    "minecraft:spruce_boat": false,
     "minecraft:iron_sword": false,
     "minecraft:enchanted_golden_apple": false,
     "minecraft:wooden_axe": false,
     "hangglider:hang_glider": false,
+    "minecraft:spruce_stairs": false,
     "minecraft:gravel": false,
     "iceandfire:amphithere_feather": false,
     "iceandfire:silver_sword": false,
@@ -318,6 +324,7 @@
     "minecraft:golden_apple": false,
     "minecraft:cooked_mutton": false,
     "minecraft:spruce_log": false,
+    "minecraft:birch_stairs": false,
     "aether:chainmail_gloves": false,
     "minecraft:white_bed": false,
     "minecraft:crafting_table": false,
@@ -330,6 +337,7 @@
     "minecraft:iron_ingot": false,
     "minecraft:air": false,
     "minecraft:rotten_flesh": false,
+    "minecraft:arrow": false,
     "born_in_chaos_v1:trident_hayfork": false,
     "minecraft:iron_hoe": false,
     "minecraft:torch": false,
@@ -368,6 +376,7 @@
     "minecraft:charcoal": false,
     "minecraft:gold_ingot": false,
     "minecraft:flint": false,
+    "minecraft:kelp": false,
     "minecraft:dandelion": false
   },
   "disableForAllTileEntities": false,
