--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -105,6 +105,7 @@
     "minecraft:stripped_dark_oak_log": false,
     "luminousworld:yellow_birch_leaves": false,
     "minecraft:copper_block": false,
+    "quark:birch_ladder": false,
     "minecraft:glass": false,
     "minecraft:dark_oak_trapdoor": false,
     "minecraft:cyan_carpet": false,
@@ -357,6 +358,7 @@
     "minecraft:dirt": false,
     "minecraft:diamond": false,
     "minecraft:potato": false,
+    "quark:birch_ladder": false,
     "minecraft:water_bucket": false,
     "minecraft:melon_slice": false,
     "iceandfire:silver_axe": false,
