--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -5,6 +5,7 @@
   "debugMode": false,
   "bannedBlocks": {
     "minecraft:sandstone_wall": false,
+    "twilightforest:twisted_stone": false,
     "minecraft:stone_pressure_plate": false,
     "minecraft:smooth_stone": false,
     "minecraft:gray_bed": false,
@@ -52,6 +53,7 @@
     "minecraft:blue_bed": false,
     "minecraft:white_terracotta": false,
     "iceandfire:pixie_house_mushroom_red": false,
+    "placeablesmod:basket": false,
     "minecraft:acacia_wood": false,
     "minecraft:stripped_mangrove_log": false,
     "luminousworld:savannah_soil": false,
@@ -101,6 +103,7 @@
     "iceandfire:dread_spawner": false,
     "minecraft:deepslate_brick_stairs": false,
     "minecraft:polished_andesite_stairs": false,
+    "furnitura:birch_shelf": false,
     "minecraft:dirt": false,
     "minecraft:stripped_dark_oak_log": false,
     "luminousworld:yellow_birch_leaves": false,
@@ -148,6 +151,7 @@
     "minecraft:bricks": false,
     "iceandfire:pixie_jar_4": false,
     "alexscaves:spelunkery_table": false,
+    "quark:vertical_birch_planks": false,
     "minecraft:petrified_oak_slab": false,
     "iceandfire:pixie_jar_2": false,
     "supplementaries:urn": false,
@@ -191,6 +195,7 @@
     "placeablesmod:wheat_block_1": false,
     "minecraft:light_gray_carpet": false,
     "minecraft:stone_brick_stairs": false,
+    "twilightforest:bold_stone_pillar": false,
     "minecraft:coarse_dirt": false,
     "minecraft:gold_ore": false,
     "minecraft:spruce_log": false,
@@ -276,6 +281,7 @@
     "born_in_chaos_v1:charmof_power": false,
     "minecraft:oak_log": false,
     "minecraft:diamond_hoe": false,
+    "twilightforest:twisted_stone": false,
     "minecraft:wheat_seeds": false,
     "minecraft:cobbled_deepslate": false,
     "minecraft:emerald": false,
@@ -290,6 +296,7 @@
     "minecraft:stone_bricks": false,
     "minecraft:golden_axe": false,
     "minecraft:apple": false,
+    "quark:vertical_birch_planks": false,
     "minecraft:slime_ball": false,
     "born_in_chaos_v1:ethereal_spirit": false,
     "minecraft:granite": false,
@@ -322,11 +329,13 @@
     "ecologics:walnut_log": false,
     "luminousworld:savannah_soil": false,
     "iceandfire:copper_sword": false,
+    "twilightforest:bold_stone_pillar": false,
     "minecraft:golden_apple": false,
     "minecraft:cooked_mutton": false,
     "minecraft:spruce_log": false,
     "minecraft:birch_stairs": false,
     "aether:chainmail_gloves": false,
+    "iceandfire:podium_birch": false,
     "minecraft:white_bed": false,
     "minecraft:crafting_table": false,
     "sophisticatedbackpacks:backpack": false,
@@ -353,6 +362,7 @@
     "minecraft:terracotta": false,
     "minecraft:string": false,
     "tombstone:gift": false,
+    "furnitura:birch_shelf": false,
     "luminousworld:purple_petunias": false,
     "luminousworld:decorative_brown_2": false,
     "minecraft:dirt": false,
