--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -108,6 +108,7 @@
     "minecraft:stripped_dark_oak_log": false,
     "luminousworld:yellow_birch_leaves": false,
     "minecraft:copper_block": false,
+    "furnitura:spruce_park_bench": false,
     "quark:birch_ladder": false,
     "minecraft:glass": false,
     "minecraft:dark_oak_trapdoor": false,
@@ -220,6 +221,7 @@
     "minecraft:smooth_red_sandstone_stairs": false,
     "minecraft:polished_andesite": false,
     "iceandfire:crackled_dirt": false,
+    "furnitura:small_table_spruce": false,
     "minecraft:deepslate_iron_ore": false,
     "minecraft:acacia_leaves": false,
     "minecraft:cracked_stone_bricks": false,
@@ -270,6 +272,7 @@
     "minecraft:orange_wall_banner": false,
     "minecraft:chiseled_stone_bricks": false,
     "minecraft:copper_ore": false,
+    "quark:dirt_bricks": false,
     "minecraft:mangrove_trapdoor": false,
     "minecraft:brown_terracotta": false,
     "minecraft:stripped_mangrove_wood": false,
@@ -284,6 +287,7 @@
     "twilightforest:twisted_stone": false,
     "minecraft:wheat_seeds": false,
     "minecraft:cobbled_deepslate": false,
+    "minecraft:shears": false,
     "minecraft:emerald": false,
     "ecologics:coconut_husk": false,
     "minecraft:bone_meal": false,
@@ -386,9 +390,11 @@
     "minecraft:iron_pickaxe": false,
     "minecraft:birch_planks": false,
     "minecraft:charcoal": false,
+    "quark:dirt_bricks": false,
     "minecraft:gold_ingot": false,
     "minecraft:flint": false,
     "minecraft:kelp": false,
+    "minecraft:birch_leaves": false,
     "minecraft:dandelion": false
   },
   "disableForAllTileEntities": false,
