--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -22,6 +22,7 @@
     "minecraft:light_gray_terracotta": false,
     "minecraft:granite": false,
     "minecraft:lantern": false,
+    "supplementaries:cage": false,
     "minecraft:cobblestone_stairs": false,
     "minecraft:polished_diorite": false,
     "minecraft:stone": false,
@@ -306,6 +307,7 @@
     "minecraft:granite": false,
     "minecraft:lantern": false,
     "supplementaries:ash": false,
+    "supplementaries:cage": false,
     "minecraft:diamond_pickaxe": false,
     "minecraft:spruce_sapling": false,
     "minecraft:stripped_jungle_wood": false,
@@ -314,6 +316,7 @@
     "minecraft:red_bed": false,
     "minecraft:jungle_planks": false,
     "minecraft:iron_shovel": false,
+    "iceandfire:silver_nugget": false,
     "iceandfire:manuscript": false,
     "minecraft:birch_sapling": false,
     "minecraft:hay_block": false,
