--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -651,6 +651,7 @@
     "SlavemanEntity": 20.0,
     "DarkOakZombieEntity": 25.0,
     "StrayBoneSpider": 24.0,
-    "Guardian": 30.0
+    "Guardian": 30.0,
+    "SearedSpiritEntity": 50.0
   }
 }
