--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -99,6 +99,7 @@
     "minecraft:tuff": false,
     "iceandfire:dread_stone_stairs": false,
     "minecraft:diorite": false,
+    "minecraft:cobblestone_slab": false,
     "minecraft:red_nether_bricks": false,
     "minecraft:terracotta": false,
     "iceandfire:dread_spawner": false,
