--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -23,6 +23,7 @@
     "minecraft:granite": false,
     "minecraft:lantern": false,
     "supplementaries:cage": false,
+    "minecraft:cobblestone_wall": false,
     "minecraft:cobblestone_stairs": false,
     "minecraft:polished_diorite": false,
     "minecraft:stone": false,
@@ -50,9 +51,11 @@
     "minecraft:ice": false,
     "minecraft:spruce_slab": false,
     "minecraft:acacia_fence": false,
+    "minecraft:magenta_wall_banner": false,
     "iceandfire:chared_stone": false,
     "minecraft:blue_bed": false,
     "minecraft:white_terracotta": false,
+    "friendsandfoes:oxidized_lightning_rod": false,
     "iceandfire:pixie_house_mushroom_red": false,
     "placeablesmod:basket": false,
     "minecraft:acacia_wood": false,
@@ -63,6 +66,7 @@
     "minecraft:white_wool": false,
     "minecraft:campfire": false,
     "minecraft:budding_amethyst": false,
+    "minecraft:oxidized_copper": false,
     "minecraft:smooth_basalt": false,
     "minecraft:powder_snow": false,
     "born_in_chaos_v1:infected_deepslate_diamond_ore": false,
@@ -105,6 +109,7 @@
     "iceandfire:dread_spawner": false,
     "minecraft:deepslate_brick_stairs": false,
     "minecraft:polished_andesite_stairs": false,
+    "friendsandfoes:waxed_oxidized_copper_button": false,
     "furnitura:birch_shelf": false,
     "minecraft:dirt": false,
     "minecraft:stripped_dark_oak_log": false,
@@ -136,6 +141,7 @@
     "minecraft:nether_brick_slab": false,
     "minecraft:acacia_planks": false,
     "minecraft:oak_log": false,
+    "minecraft:carved_pumpkin": false,
     "minecraft:mud": false,
     "iceandfire:frozen_grass": false,
     "minecraft:sandstone_stairs": false,
@@ -151,6 +157,7 @@
     "minecraft:white_stained_glass_pane": false,
     "quark:violet_corundum": false,
     "minecraft:black_bed": false,
+    "minecraft:redstone_lamp": false,
     "minecraft:bricks": false,
     "iceandfire:pixie_jar_4": false,
     "alexscaves:spelunkery_table": false,
@@ -193,6 +200,7 @@
     "minecraft:glowstone": false,
     "ecologics:walnut_log": false,
     "minecraft:orange_terracotta": false,
+    "minecraft:white_wall_banner": false,
     "minecraft:glow_lichen": false,
     "born_in_chaos_v1:black_argillite_brick_slab": false,
     "placeablesmod:wheat_block_1": false,
@@ -233,6 +241,7 @@
     "minecraft:jungle_leaves": false,
     "minecraft:cobweb": false,
     "minecraft:coal_block": false,
+    "minecraft:redstone_block": false,
     "minecraft:stripped_spruce_log": false,
     "minecraft:stripped_dark_oak_wood": false,
     "luminousworld:savannah_ground": false,
@@ -256,6 +265,7 @@
     "minecraft:mycelium": false,
     "iceandfire:gold_pile": false,
     "minecraft:gray_carpet": false,
+    "minecraft:stone_brick_wall": false,
     "iceandfire:dread_stone_bricks": false,
     "minecraft:stripped_oak_log": false,
     "minecraft:obsidian": false,
